--- a/src/main/resources/templates/stdout.html
+++ b/src/main/resources/templates/stdout.html
@@ -3,24 +3,30 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Task stdout</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <title>Task stdout</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 
 <body>
 
-    <h2>Task id: <span th:text="${taskStdout.getChainTaskId()}"></span></h2>
+  <div th:unless="${ taskStdout == null }">
+    <h2>Task id: <span th:text="${ taskStdout.getChainTaskId() }"></span></h2>
 
-    <div th:each="e : ${ taskStdout.replicateStdoutList }">
-        <p><strong>Replicate: </strong><span th:text="${ e.getWalletAddress() }"></span> </p>
-        <p><strong>Stdout: </strong></p>
-        <code th:utext='${ e.getStdout().replaceAll("\n", "</br>") }'></code>
-        <br>
+    <div th:each="entry : ${ taskStdout.replicateStdoutList }">
+      <p><strong>Replicate: </strong><span th:text="${ entry.getWalletAddress() }"></span> </p>
+      <code th:utext='${ entry.getStdout().replaceAll("\n", "</br>") }'></code>
+      <br>
     </div>
+  </div>
 
-    <style>
-      body {
-        padding-left: 3em;
-      }
-    </style>
+  <div th:unless="${ taskStdout != null }">
+    <h2>Task not found</h2>
+  </div>
+
+
+  <style>
+    body {
+      padding-left: 3em;
+    }
+  </style>
 </body>
